[tool.poetry]
name = "ch_util"
version = "20.10.0+60.ge76f6ab"
description = "Utilities for CHIME."
authors = ["CHIME Collaboration <richard@phas.ubc.ca>"]
packages = [
    { include = "ch_util_data" },
] 
include = ["ch_util/catalogs/*.json"]
readme = "README.md"
repository = "https://github.com/chime-experiment/ch_util"
documentation = "https://chime-experiment.github.io/ch_util/"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scipy = "^1.6.3"
numpy = "^1.20.3"
networkx = "^2.5.1"
mpi4py = {version = "^3.0.3", optional = true}
peewee = {version = "^3.14.4", optional = true}
matplotlib = {version = "^3.4.2", optional = true}
caput = {git = "https://github.com/radiocosmology/caput.git"}
bitshuffle = {git = "https://github.com/chimefrb/bitshuffle.git", optional = true}
chimedb = {git = "https://github.com/chime-experiment/chimedb.git", optional = true}
"chimedb.data-index" = {git = "https://github.com/chime-experiment/chimedb_di.git", optional = true}
#"chimedb.config" = {git = "ssh://git@github.com/chime-experiment/chimedb_config.git", optional = true}
"chimedb.dataflag" = {git = "https://github.com/chime-experiment/chimedb_dataflag.git", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.extras]
database = ["peewee", "chimedb", "chimedb.data-index", "chimedb.dataflag"]
data = ["bitshuffle", "matplotlib"]
mpi = ["mpi4py"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "21.0.0"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"